--- a/pages/aboutUs.html
+++ b/pages/aboutUs.html
@@ -56,26 +56,14 @@
       <p style="font-size: 17px">Welcome to Weather-web App!</p>
 
       <p style="font-size: 17px">
-        We are dedicated to simplifying your weather tracking experience. Our
-        platform seamlessly fetches real-time weather data for any location
-        worldwide, providing you with accurate updates on temperature, humidity,
-        wind speed, and more. With a user-friendly interface, you can
-        effortlessly save your preferred locations and receive personalized
-        weather alerts.
+        We’re here to make tracking the weather effortless for you. Our platform provides real-time weather updates for any location around the globe, giving you accurate information on temperature, humidity, wind speed, and more. With our intuitive interface, you can easily save your favorite locations and get personalized weather alerts.
       </p>
       <p style="font-size: 17px">
-        Our commitment lies in delivering reliable and comprehensive weather
-        information, ensuring you stay prepared for any weather event. Whether
-        you're planning a trip or need to stay informed about your local
-        forecast, Weather-web App is here to make your life easier. Count on us
-        to provide the most up-to-date and trustworthy weather insights, helping
-        you make informed decisions no matter the forecast.
+        We are dedicated to delivering dependable and detailed weather information, ensuring you’re always prepared for any conditions. Whether you’re planning a trip or just want to stay informed about your local forecast, Weather-web App is your go-to source for reliable insights.
       </p>
 
       <p style="font-size: 17px">
-        Experience the convenience and simplicity of Weather-web App today. Let
-        us keep you ahead of the weather curve, no matter where you are. Thank
-        you for choosing Weather-web App for all your weather needs!
+        Experience the ease and efficiency of Weather-web App today. Let us help you stay ahead of the weather, wherever you are. Thank you for choosing Weather-web App for your weather needs!
       </p>
     </div>
   </body>
