--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Weather-App</title>
+    <title>Live-Weather-Forecast</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap"
@@ -24,7 +24,7 @@
           <a href="./index.html" class="navbar__menu-link clouds"
             ><img src="./Assets/images/cloudy.png" alt="" class="image"
           /></a>
-          <h3>Weather-App</h3>
+          <h3>Live-Weather-Forecast</h3>
         </div>
 
         <ul class="navbar__menu">
