--- a/pages/aboutUs.html
+++ b/pages/aboutUs.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Weather App</title>
+    <title>Live-Weather-Forecast</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap"
@@ -25,7 +25,7 @@
             ><img src="../Assets/images/cloudy.png" alt="" class="image"
           /></a>
 
-          <h3>Weather-App</h3>
+          <h3>Live-Weather-Forecast</h3>
         </div>
         <ul class="navbar__menu">
           <li class="navbar__menu-item">
@@ -39,7 +39,7 @@
           </li>
         </ul>
         <a
-          href="https://github.com/shivang21007/Weather-web-app"
+          href="https://github.com/SOMESH14082/WEATHER_FORECAST"
           target="_blank"
           class="navbar__menu-link github_logo"
           ><img src="../Assets/images/github_logo.png" alt="" class="image"
@@ -49,21 +49,21 @@
 
     <div class="card card1">
       <div style="justify-content: center">
-        <h1 style="display: flex; justify-content: center">Weather-Web-App</h1>
+        <h1 style="display: flex; justify-content: center">Live-Weather-Forecast</h1>
       </div>
       <div class="rectangle"></div>
       <br />
-      <p style="font-size: 17px">Welcome to Weather-web App!</p>
+      <p style="font-size: 17px">Welcome to Live-Weather-Forecast!</p>
 
       <p style="font-size: 17px">
         We’re here to make tracking the weather effortless for you. Our platform provides real-time weather updates for any location around the globe, giving you accurate information on temperature, humidity, wind speed, and more. With our intuitive interface, you can easily save your favorite locations and get personalized weather alerts.
       </p>
       <p style="font-size: 17px">
-        We are dedicated to delivering dependable and detailed weather information, ensuring you’re always prepared for any conditions. Whether you’re planning a trip or just want to stay informed about your local forecast, Weather-web App is your go-to source for reliable insights.
+        We are dedicated to delivering dependable and detailed weather information, ensuring you’re always prepared for any conditions. Whether you’re planning a trip or just want to stay informed about your local forecast, Live-Weather-Forecast App is your go-to source for reliable insights.
       </p>
 
       <p style="font-size: 17px">
-        Experience the ease and efficiency of Weather-web App today. Let us help you stay ahead of the weather, wherever you are. Thank you for choosing Weather-web App for your weather needs!
+        Experience the ease and efficiency of Live-Weather-Forecast App today. Let us help you stay ahead of the weather, wherever you are. Thank you for choosing Live-Weather-Forecast App for your weather needs!
       </p>
     </div>
   </body>
