--- a/pages/contactUs.html
+++ b/pages/contactUs.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Weather App</title>
+    <title>Live-Weather-Forecast</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap"
@@ -25,7 +25,7 @@
             ><img src="../Assets/images/cloudy.png" alt="" class="image"
           /></a>
 
-          <h3>Weather-App</h3>
+          <h3>Live-Weather-Forecast</h3>
         </div>
         <ul class="navbar__menu">
           <li class="navbar__menu-item">
@@ -39,7 +39,7 @@
           </li>
         </ul>
         <a
-          href="https://github.com/shivang21007/Weather-web-app"
+          href="https://github.com/SOMESH14082/WEATHER_FORECAST"
           target="_blank"
           class="navbar__menu-link github_logo"
           ><img src="../Assets/images/github_logo.png" alt="" class="image"
