--- a/pages/aboutUs.html
+++ b/pages/aboutUs.html
@@ -63,7 +63,7 @@
       </p>
 
       <p style="font-size: 17px">
-        Experience the ease and efficiency of Live-Weather-Forecast App today. Let us help you stay ahead of the weather, wherever you are. Thank you for choosing Live-Weather-Forecast App for your weather needs!
+        Experience the ease and efficiency of the Live-Weather-Forecast App today. Let us help you stay ahead of the weather, wherever you are. Thank you for choosing Live-Weather-Forecast App for your weather needs!
       </p>
     </div>
   </body>
